[package]
name = "rekoobe-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
anyhow = "1.0.94"
cbc = { version = "0.1.2", features = ["std"] }
cipher = "0.4.4"
colog = "1.3.0"
colored = "2.1.0"
env_logger = "0.11.5"
etherparse = "0.16.0"
hex = "0.4.3"
log = "0.4.22"
pcap = "2.2.0"
sha1 = "0.10.6"
structopt = "0.3.26"
